; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_reg.c_get_stringvalue.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_reg.c_get_stringvalue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"%p, %s, %s\0A\00", align 1
@RRF_RT_REG_SZ = common dso_local global i32 0, align 4
@E_OUTOFMEMORY = common dso_local global i32 0, align 4
@VT_BSTR = common dso_local global i32 0, align 4
@VT_UI4 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32*, i32*, i32*)* @get_stringvalue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_stringvalue(i32 %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %15 = load i32, i32* @S_OK, align 4
  store i32 %15, i32* %11, align 4
  store i32* null, i32** %12, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i32*, i32** %7, align 8
  %18 = call i32 @debugstr_w(i32* %17)
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @debugstr_w(i32* %19)
  %21 = call i32 @TRACE(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %16, i32 %18, i32 %20)
  %22 = load i32, i32* %6, align 4
  %23 = load i32*, i32** %7, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = load i32, i32* @RRF_RT_REG_SZ, align 4
  %26 = call i64 @RegGetValueW(i32 %22, i32* %23, i32* %24, i32 %25, i32* null, i32* null, i32* %13)
  store i64 %26, i64* %14, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %5
  br label %53

29:                                               ; preds = %5
  %30 = load i32, i32* %13, align 4
  %31 = sext i32 %30 to i64
  %32 = udiv i64 %31, 4
  %33 = sub i64 %32, 1
  %34 = trunc i64 %33 to i32
  %35 = call i32* @SysAllocStringLen(i32* null, i32 %34)
  store i32* %35, i32** %12, align 8
  %36 = icmp ne i32* %35, null
  br i1 %36, label %39, label %37

37:                                               ; preds = %29
  %38 = load i32, i32* @E_OUTOFMEMORY, align 4
  store i32 %38, i32* %11, align 4
  br label %53

39:                                               ; preds = %29
  %40 = load i32, i32* %6, align 4
  %41 = load i32*, i32** %7, align 8
  %42 = load i32*, i32** %8, align 8
  %43 = load i32, i32* @RRF_RT_REG_SZ, align 4
  %44 = load i32*, i32** %12, align 8
  %45 = call i64 @RegGetValueW(i32 %40, i32* %41, i32* %42, i32 %43, i32* null, i32* %44, i32* %13)
  store i64 %45, i64* %14, align 8
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %52, label %47

47:                                               ; preds = %39
  %48 = load i32, i32* @VT_BSTR, align 4
  %49 = load i32*, i32** %12, align 8
  %50 = load i32*, i32** %9, align 8
  %51 = call i32 @set_variant(i32 %48, i64 0, i32* %49, i32* %50)
  br label %52

52:                                               ; preds = %47, %39
  br label %53

53:                                               ; preds = %52, %37, %28
  %54 = load i32, i32* @VT_UI4, align 4
  %55 = load i64, i64* %14, align 8
  %56 = load i32*, i32** %10, align 8
  %57 = call i32 @set_variant(i32 %54, i64 %55, i32* null, i32* %56)
  %58 = load i64, i64* %14, align 8
  %59 = icmp ne i64 %58, 0
  br i1 %59, label %60, label %63

60:                                               ; preds = %53
  %61 = load i32*, i32** %12, align 8
  %62 = call i32 @SysFreeString(i32* %61)
  br label %63

63:                                               ; preds = %60, %53
  %64 = load i32, i32* %11, align 4
  ret i32 %64
}

declare dso_local i32 @TRACE(i8*, i32, i32, i32) #1

declare dso_local i32 @debugstr_w(i32*) #1

declare dso_local i64 @RegGetValueW(i32, i32*, i32*, i32, i32*, i32*, i32*) #1

declare dso_local i32* @SysAllocStringLen(i32*, i32) #1

declare dso_local i32 @set_variant(i32, i64, i32*, i32*) #1

declare dso_local i32 @SysFreeString(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
